replace sliced image with react components and data from api

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="no desc" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/ads.css" />
     <title>Female Daily FE Test</title>
   </head>
   <body>
+    <div id="root"></div>
     <header>
       <section id="banner">
         <img src="images/banner.png" alt="banner" />
@@ -32,9 +31,7 @@
           <p>Curated with love</p>
         </div>
       </div>
-      <div class="content">
-        <img src="images/editors-choice.png" alt="editor's choice" />
-      </div>
+      <div class="content"></div>
     </section>
     <section id="matches">
       <img src="images/matches.png" alt="your matches" />
@@ -55,25 +52,24 @@
           <a href="#">See more ></a>
         </div>
       </div>
-      <div class="content">
-        <img src="images/latest-articles.png" alt="latest articles" />
-      </div>
+      <div class="content"></div>
     </section>
     <section id="latest-reviews-container" class="padded-section">
+      <div class="section-header">
+        <div class="title">
+          <h2>Latest Reviews</h2>
+          <p>So you can make better purchase decision</p>
+        </div>
+        <div class="link">
+          <a href="#">See more ></a>
+        </div>
+      </div>
+      <section id="empty-divs"></section>
+
       <section id="latest-reviews">
-        <div class="section-header">
-          <div class="title">
-            <h2>Latest Reviews</h2>
-            <p>So you can make better purchase decision</p>
-          </div>
-          <div class="link">
-            <a href="#">See more ></a>
-          </div>
-        </div>
-        <div class="content">
-          <img src="images/latest-reviews.png" alt="latest articles" />
-        </div>
+        <div class="content"></div>
       </section>
+
       <section id="side-ads">
         <div id="mr-2" class="ads">
           <span>MR-2</span>
